<resources>
    <string name="app_name">BusWatch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">BusWatch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addNewRouteButtonText">Add New Route</string>
    <string name="title_activity_new_route">New Route</string>
    <string name="pref_sync_frequency">sync_frequency</string>
    <string name="pref_checkin_frequency">checkin_frequency</string>
    <string name="pref_route_seek_range">route_seek_range</string>
    <string name="pref_sync_frequency_default">15</string>
    <string name="pref_checkin_frequency_default">10</string>
    <string name="pref_route_seek_range_default">100</string>
</resources>
