<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_sync_frequency_default"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="@string/pref_sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <ListPreference
        android:defaultValue="@string/pref_checkin_frequency_default"
        android:entries="@array/pref_location_updates_entries"
        android:entryValues="@array/pref_location_updates_values"
        android:key="@string/pref_checkin_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Location updates during checkin" />

    <ListPreference
        android:defaultValue="@string/pref_route_seek_range_default"
        android:entries="@array/pref_route_seek_range_entries"
        android:entryValues="@array/pref_route_seek_range_values"
        android:key="@string/pref_route_seek_range"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Range for seeking routes" />

</PreferenceScreen>
